# kartograph

./: .dockerignore  .env.example  .gitignore  .hyperloop.yaml  .pre-commit-config.yaml  404.html  AGENTS.md  Austin_README.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  compose.agent.yaml  compose.dev.yaml  compose.keycloak.yaml  compose.yaml  index.html  jira-tree-AIHCM-120.md  renovate.json  sitemap-0.xml  sitemap-index.xml  test.sh
src/agent-runtime/: Dockerfile  pyproject.toml
src/agent-runtime/kartograph_agent_runtime/: __init__.py  __main__.py  agent_prompt.py  executor.py  extraction_jobs_tools.py  runtime_auth.py  schema_tools.py  server.py  settings.py  thinking_stream.py  tools.py  vertex.py  workspace_paths.py
src/agent-runtime/tests/: test_agent_prompt.py  test_executor.py  test_schema_tools.py  test_server.py  test_thinking_stream.py  test_vertex.py  test_workspace_paths.py
src/api/: .dockerignore  Dockerfile  README.md  alembic.ini  health_routes.py  main.py  pyproject.toml
src/api/.hyperloop/: worker-result.yaml
src/api/auth/: __init__.py  observability.py
src/api/auth/presentation/: __init__.py  routes.py
src/api/extraction/: __init__.py  dependencies.py
src/api/extraction/application/: __init__.py  agent_session_service.py  archive_completed_extraction_jobs.py  archived_extraction_history.py  chat_turn_service.py  extraction_job_target_context.py  graph_management_session_journal.py  job_package_gate.py  schema_authoring_guide.py  services.py  skill_resolution_service.py  sticky_session_materialization.py  sticky_session_runtime_service.py  thinking_activity.py
src/api/extraction/domain/: __init__.py  extraction_job.py  graph_management_session_scope.py  instance_change_record.py  mutation_jsonl_metrics.py  prepared_extraction_job_run.py  prepared_job_package_source.py  repository_workspace_paths.py  value_objects.py
src/api/extraction/infrastructure/: __init__.py  agentic_ci_extraction_job_runner.py  archive_completed_extraction_jobs.py  container_workload_runtime.py  deterministic_chat_agent.py  event_handler.py  extraction_job_activity.py  extraction_job_container.py  extraction_job_executor.py  extraction_job_metrics.py  extraction_job_mutation_metrics.py  extraction_job_prompt.py  extraction_job_repository_files.py  extraction_job_runner_factory.py  extraction_job_verdict.py  extraction_job_workdir_layout.py  extraction_job_workdir_materializer.py  extraction_run_orchestrator.py  extraction_run_reconciliation.py  ingestion_readiness_reader.py  job_mutation_artifact_store.py  maintenance_job_prompt.py  maintenance_repository_files.py  openshell_extraction_job_runner.py  prepared_job_package_reader.py  remote_sticky_container_chat_agent.py  runtime_context_builder.py  runtime_session_auth.py  sticky_runtime_health.py  sticky_session_bootstrap_builder.py  sticky_session_workdir_materializer.py  sticky_session_workspace_binds.py  sticky_session_workspace_permissions.py  stub_extraction_job_runner.py  vertex_runtime_env.py  workload_credential_issuer.py  workload_runtime.py  workload_runtime_factory.py  workload_runtime_settings.py
src/api/extraction/ports/: __init__.py  chat_agent.py  extraction_job_runner.py  extraction_job_target_context.py  ingestion_readiness.py  prepared_job_packages.py  repositories.py  runtime.py  services.py  sticky_runtime_health.py  sticky_session_bootstrap.py  sticky_session_runtime.py  workload_extraction_jobs.py  workload_graph.py  workload_schema.py
src/api/extraction/presentation/: __init__.py  models.py  routes.py  workload_auth.py  workload_routes.py
src/api/graph/: __init__.py  dependencies.py
src/api/graph/application/: __init__.py  observability.py  services.py
src/api/graph/domain/: __init__.py  value_objects.py
src/api/graph/infrastructure/: __init__.py  age_bulk_loading.py  age_client.py  bulk_data_reader.py  cypher_utils.py  event_handler.py  exceptions.py  graph_repository.py  mutation_applier.py  noop_mutation_applier.py  observability.py  postgres_kg_type_definition_store.py  protocols.py  tenant_graph_handler.py  type_definition_repository.py
src/api/graph/ports/: __init__.py  age_bulk_loading_probe.py  bulk_loading.py  mutation_log.py  observability.py  protocols.py  repositories.py
src/api/iam/: dependencies.py  walking_skeleton_bootstrap.py
src/api/infrastructure/: __init__.py  authorization_dependencies.py  dependencies.py  logging.py  mcp_dependencies.py  settings.py  version.py
src/api/ingestion/: __init__.py
src/api/management/: __init__.py
src/api/query/: dependencies.py
src/api/scripts/: api-entrypoint-openshift.sh  smoke-openshell-extraction-job.py
src/api/shared_kernel/: __init__.py  credential_reader.py  datasource_types.py  observability_context.py
src/api/tests/: test_health.py
src/api/util/: __init__.py  dev_routes.py
(+12963 files in other folders)
