[project]
name = "kartograph-agent-runtime"
version = "0.1.0"
description = "Sticky session Claude Agent SDK runtime for Kartograph graph management chat"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.2.87",
    "fastapi[standard]>=0.123.9",
    "httpx>=0.28.1",
    "pydantic-settings>=2.12.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
pythonpath = ["."]
